--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0-beta02'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'com.google.code.gson:gson:2.8.2'
 }
