--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".view.main.ActivityMain"
+                android:name=".view.account.ActivityAccount"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme">
@@ -29,6 +29,10 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme"
                 android:name=".view.student.profile.friendList.ActivityFriend"/>
+        <activity
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.main.ActivityMain"/>
     </application>
 
 </manifest>
