--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ir.pepotec.app.awesomeapp">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
             android:name=".view.uses.App"
             android:allowBackup="true"
@@ -11,6 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:windowSoftInputMode="stateHidden"
                 android:name=".view.account.ActivityAccount"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
@@ -22,17 +25,25 @@
             </intent-filter>
         </activity>
         <activity
+                android:windowSoftInputMode="stateHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme"
                 android:name=".view.student.ActivityStudent"/>
         <activity
+                android:windowSoftInputMode="stateHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme"
                 android:name=".view.student.profile.friendList.ActivityFriend"/>
         <activity
+                android:windowSoftInputMode="stateHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme"
                 android:name=".view.main.ActivityMain"/>
+        <activity
+                android:windowSoftInputMode="stateHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.student.ability.activityAbility.ActivityAbility"/>
     </application>
 
 </manifest>
