--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait"
             android:name=".view.uses.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,11 +15,9 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:windowSoftInputMode="stateHidden"
-                android:name=".view.account.ActivityAccount"
+                android:name=".view.launcher.ActivityLauncher"
                 android:label="@string/app_name"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme">
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -48,9 +48,27 @@
                 android:windowSoftInputMode="stateHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme"
-                android:name=".view.main.search.activitySearch.ActivitySearch"/>
-        <activity android:name=".view.student.chat.messageList.ActivityMessageList"/>
-        <activity android:name=".view.file.ActivityFile"/>
+                android:name=".view.main.search.ActivitySearch"/>
+        <activity
+                android:windowSoftInputMode="stateHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.student.chat.messageList.ActivityMessageList"/>
+        <activity
+                android:windowSoftInputMode="stateHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.file.ActivityFile"/>
+        <activity
+                android:windowSoftInputMode="stateHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.account.ActivityAccount"/>
+        <activity
+                android:windowSoftInputMode="stateHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme"
+                android:name=".view.blog.ActivityBlog"/>
         <service android:name=".view.student.chat.ServiceChat"/>
     </application>
 
