--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'cn.lightsky.infiniteindicator:library:1.2.2'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
