--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ir.pepotec.app.awesomeapp">
+        xmlns:tools="http://schemas.android.com/tools"
+        package="ir.pepotec.app.awesomeapp">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -11,10 +12,13 @@
             android:name=".view.uses.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
+            android:networkSecurityConfig="@xml/network_security_config"
+            android:usesCleartextTraffic="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            tools:targetApi="n">
         <activity
                 android:name=".view.launcher.ActivityLauncher"
                 android:label="@string/app_name">
